--- a/1.html
+++ b/1.html
@@ -55,6 +55,8 @@
             <p class="des-lg">소프트웨어 전공</p>
         </section>
 
+        <footer>Copyright LikeLion ALL rights reserved</footer>
+
         
     </div>
 </body>
